<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundColor"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <RelativeLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_4dp"
        android:paddingTop="@dimen/_4dp"
        android:paddingRight="@dimen/_4dp"
        android:paddingBottom="@dimen/_4dp">

        <Button
            android:id="@+id/registerButton"
            android:textColor="@color/textColor"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="319dp"
            android:text="@string/register" />

        <EditText
            android:id="@+id/emailEntry"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="93dp"
            android:layout_marginTop="106dp"
            android:layout_marginBottom="93dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEntry"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/emailEntry"
            android:layout_alignParentStart="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="74dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="398dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/forgotButton"
            android:textColor="@color/textColor"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="209dp"
            android:layout_marginBottom="319dp"
            android:text="@string/forgotPass" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleloginButton"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="68dp"
            android:layout_marginBottom="210dp" />

    </RelativeLayout>

</FrameLayout>