<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        android:id="@+id/registerLayout"
        android:background="@color/backgroundColor"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_4dp"
        android:paddingTop="@dimen/_4dp"
        android:paddingRight="@dimen/_4dp"
        android:paddingBottom="@dimen/_4dp"
        tools:context=".RegisterActivity">


        <EditText
            android:id="@+id/registerEmail"
            android:textColor="@color/textColor"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="93dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/registerPassword"
            android:textColor="@color/textColor"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="176dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:textColor="@color/textColor"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="226dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerAccountButton"
            android:textColor="@color/textColor"
            android:layout_width="382dp"
            android:layout_height="65dp"
            android:layout_below="@+id/registerConfirmPassword"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="325dp"
            android:text="@string/createAccount" />


    </RelativeLayout>
