<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ForgotFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_4dp"
        android:paddingTop="@dimen/_4dp"
        android:paddingRight="@dimen/_4dp"
        android:paddingBottom="@dimen/_4dp">


        <EditText
            android:id="@+id/forgotEmail"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/confirmForgotEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="59dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="11dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/confirmForgotEmail"
            android:textColor="@color/textColor"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="59dp"
            android:layout_marginBottom="381dp"
            android:ems="10"
            android:hint="@string/confirmEmail"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/recoverAccountButton"
            android:textColor="@color/textColor"
            android:layout_width="382dp"
            android:layout_height="65dp"
            android:layout_below="@+id/confirmForgotEmail"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-275dp"
            android:layout_marginEnd="3dp"
            android:text="@string/recoverAccount" />
    </RelativeLayout>

</FrameLayout>